feat: :sparkles: Adjust name of response and define create book operation
