# driving/api-rest/src/main/java/com/library/manager/driving/controllers/mappers/BookMapper.java
@@ -4,7 +4,7 @@ import com.library.manager.domain.Book;
 import com.library.manager.domain.BookGenre;
 import com.library.manager.domain.valueobjects.BookFilter;
 import com.library.manager.domain.valueobjects.PaginatedResult;
-import com.library.manager.driving.controllers.models.BookResource;
+import com.library.manager.driving.controllers.models.BookResponse;
 import com.library.manager.driving.controllers.models.BooksResponse;
 import com.library.manager.driving.controllers.models.Pagination;
 import org.mapstruct.Mapper;
@@ -20,10 +20,10 @@ import java.util.List;
 @Mapper(componentModel = "spring")
 public interface BookMapper {
 
-    @Mapping(source = "bookGenre", target = "genre", qualifiedByName = "EnumToString")
-    BookResource toBookResource(Book book);
+    @Mapping(source = "bookGenre", target = "bookGenre", qualifiedByName = "EnumToString")
+    BookResponse toBookResponse(Book book);
 
-    List<BookResource> toListBookResource(List<Book> bookList);
+    List<BookResponse> toListBookResponse(List<Book> bookList);
 
     @Mapping(source = "pageNumber", target = "number")
     @Mapping(source = "pageSize", target = "size")
@@ -36,7 +36,7 @@ public interface BookMapper {
     default BooksResponse toResponse(PaginatedResult<Book> paginatedResult) {
         BooksResponse response = new BooksResponse();
 
-        response.setBooks(toListBookResource(paginatedResult.content()));
+        response.setBooks(toListBookResponse(paginatedResult.content()));
         response.setPagination(toPagination(paginatedResult));
         response.getPagination().setTimestamp(nowToUtcOffsetDateTime());
 
